try to fix home screen height on iphone

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,7 +4,7 @@
 }
 
 body, html {
-    /* height: 100%; */
+    height: 100%;
     width: 100%;
     margin: 0;
 }
